- main file of 'see' has now ObjC extension - Added getopt parsing code to see

--- a/subethaedit/see/see.1
+++ b/subethaedit/see/see.1
@@ -16,8 +16,8 @@
 .Nd This line parsed for whatis database.
 .Sh SYNOPSIS             \" Section Header - required - don't modify
 .Nm
-.Op Fl abcd              \" [-abcd]
-.Op Fl a Ar path         \" [-a path] 
+.Op Fl hrvw              \" [-abcd]
+.Op Fl e Ar encoding     \" [-a path] 
 .Op Ar file              \" [file]
 .Op Ar                   \" [file ...]
 .Ar arg0                 \" Underlined argument - use .Ar anywhere to underline
