--- a/subethaedit/see/see.1
+++ b/subethaedit/see/see.1
@@ -3,45 +3,58 @@
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
-.Dd Fri Apr 09 2004               \" DATE 
-.Dt see 1      \" Program name and manual section number 
-.Os Darwin
+.\"
+.\" nroff -msafer -mandoc see.1 | less
+.\"
+.Dd September 28, 2004               \" DATE 
+.Dt SEE "" "SubEthaEdit Command Line Manual"     \" Program name and manual section number 
+.Os "Mac OS X"
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm see,
+.Nm see
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
-.Nm Other_name_for_same_program(),
-.Nm Yet another name for the same program.
+.\" .Nm Other_name_for_same_program(),
+.\" .Nm Yet another name for the same program.
 .\" Use .Nm macro to designate other names for the documented program.
-.Nd This line parsed for whatis database.
+.Nd Command line interface for SubEthaEdit.
 .Sh SYNOPSIS             \" Section Header - required - don't modify
 .Nm
-.Op Fl hrvw              \" [-abcd]
-.Op Fl e Ar encoding     \" [-a path] 
-.Op Ar file              \" [file]
+.Op Fl hlprvw
+.Op Fl e Ar encoding_name
+.Op Fl j Ar string
+.Op Fl m Ar mode_identifier
+.Op Fl t Ar string
+.\" .Op Ar file              \" [file]
 .Op Ar                   \" [file ...]
-.Ar arg0                 \" Underlined argument - use .Ar anywhere to underline
-arg2 ...                 \" Arguments
+.\" .Ar arg0                 \" Underlined argument - use .Ar anywhere to underline
+.\" arg2 ...                 \" Arguments
 .Sh DESCRIPTION          \" Section Header - required - don't modify
-Use the .Nm macro to refer to your program throughout the man page like such:
+The
 .Nm
-Underlining is accomplished with the .Ar macro like this:
-.Ar underlined text .
+command allows you to open files in SubEthaEdit via the command line.
 .Pp                      \" Inserts a space
-A list of items with descriptions:
-.Bl -tag -width -indent  \" Begins a tagged list 
-.It item a               \" Each item preceded by .It macro
-Description of item a
-.It item b
-Description of item b
-.El                      \" Ends the list
-.Pp
-A list of flags and their descriptions:
+A list of options and their descriptions:
 .Bl -tag -width -indent  \" Differs from above in tag removed 
-.It Fl a                 \"-a flag as a list item
-Description of -a flag
-.It Fl b
-Description of -b flag
+.It Fl e, -encoding Ar name
+Specify the internet name of an encoding to open the specified files using that encoding.
+.It Fl h, -help
+Display usage information and exit.
+.It Fl j, -job-description Ar string
+Specify ...
+.It Fl l, -launch
+Launch SubEthaEdit or activate it, if it's already running.
+.It Fl m, -mode Ar identifier
+Specify the identifier of a mode to open the specified files using that mode.
+.It Fl p, -print
+Print the specified files on the default printer.
+.It Fl r, -resume
+Description of -r flag
+.It Fl t, -pipe-title Ar string
+Specify ...
+.It Fl v, -version
+Display version information and exit.
+.It Fl w, -wait
+Description of -w flag
 .El                      \" Ends the list
 .Pp
 .\" .Sh ENVIRONMENT      \" May not be needed
@@ -51,29 +64,21 @@ Description of -b flag
 .\" .It Ev ENV_VAR_2
 .\" Description of ENV_VAR_2
 .\" .El                      
-.Sh FILES                \" File used or created by the topic of the man page
-.Bl -tag -width "/Users/joeuser/Library/really_long_file_name" -compact
-.It Pa /usr/share/file_name
-FILE_1description
-.It Pa /Users/joeuser/Library/really_long_file_name
-FILE_2 description
-.\" .Sh DIAGNOSTICS       \" May not be needed
-.\" .Bl -diag
-.\" .It Diagnostic Tag
-.\" Diagnostic informtion here.
-.\" .It Diagnostic Tag
-.\" Diagnostic informtion here.
-.\" .El
-.Sh SEE ALSO 
-.\" List links in ascending order by section, alphabetically within a section.
-.\" Please do not reference files that do not exist without filing a bug report
-.Xr a 1 , 
-.Xr b 1 ,
-.Xr c 1 ,
-.Xr a 2 ,
-.Xr b 2 ,
-.Xr a 3 ,
-.Xr b 3 
+.\" .Sh FILES                \" File used or created by the topic of the man page
+.Sh EXAMPLES
+Open a file using UTF-8 encoding:
+.Pp
+.Dl see --encoding utf-8 index.html
+.Pp
+Open a file using XML mode:
+.Pp
+.Dl see --mode XML environment.plist
+.Pp
+Pipe a file listing into see, edit the opened document in SubEthaEdit and after closing it grep the output for a string:
+.Pp
+.Dl ls -l | see | grep \&"foo\&"
 .\" .Sh BUGS              \" Document known, unremedied bugs 
 .\" .Sh HISTORY           \" Document history if command behaves in a unique manner 
-
+.Sh AUTHOR
+TheCodingMonkeys <http://www.codingmonkeys.de>
+.\" .Sh SEE ALSO
