--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,65 +1,64 @@
-SubEthaEdit 2.1 Release Notes (r754:r963)
+SubEthaEdit 2.1 Release Notes (r754:r967)
 
-Additions/New Features: (verbose)
-- Added menu item/keyboard shortcut for blockedit. (HYR-360, r773)
-- see command line tool.
-- "Copy as XHTML".
-- "Copy with Styles". (r795)
-- Improved AppleScript terminology.
-- Highly improved printing.
-- Open and save files as root (SEE-12, SEE-13)
-- Entab/Detab. (r792)
-- HTML-Export. (SEE-135)
-- "Go into bundles" in all open and save dialogs. (r805)
-- Syntax Styles, Human readable state names (goes along with syntax styles).
-- Added more keywords/functions/constants/enums to Objective-C mode.
-- "Apply to open Documents" in editing preferences.
-- Advanced prefs for "Screen Fonts" and "Synthesise Bold and Italic".
-- Added release notes menu item. (r909)
-- Added watermark to documents which show up after 2 minutes of inactivity on non-commercial licensed copies.
-- Autocompletion now works by taking into account all open documents of a mode.
-- Recognize .cc extension as C++ (HYR-264, rXXX)
-- New localizations: French, Korean.
+Additions/New Features:
+- Added preference pane for customizing the syntax highlighting style for modes. Syntax styles can also be imported and exported.
+- Documents can be exported to HTML files including collaboration metadata. (SEE-135)
+- Documents can be printed with page headers, line numbers, highlighted syntax and collaboration annotations.
+- A selection of text can now be copied to the clipboard as XHTML.
+- A selection of text can now be copied to the clipboard while preserving font styles. (r795)
+- Added see command line tool for opening files in SubEthaEdit via the command line.
+- C++ mode adds .cc file extension to its list of supported extensions. (HYR-264, r965)
+- Added option to open and save panels for looking into bundles. (r805)
+- Added highlighting support for entities in XML and related modes. (r883)
+- Documents can be opened and saved using administrator permissions. (SEE-12, SEE-13)
+- Non-commercial licensed copies embed watermarks into documents after 2 minutes of inactivity. They will disappear when SubEthaEdit is reactivated.
+- Added entab and detab feature for text. (r792)
+- Changes to the editing preferences can now be applied explicitly to open documents.
+- Added release notes document to the application. (r909)
+- AppleScript: Added encoding, mode, access control, announced status and URL properties to the text document class.
+- Added advanced preferences for screen fonts and for synthesising bold and italic font variants.
+- Added menu command and keyboard shortcut for blockedit. (HYR-360, r773)
+- Added several missing enums and constants to the Objective-C mode.
+- Added French and Korean localizations.
 
 Changes:
-- Moved font prefs from editing to style prefs. (r894)
-- Setup show new features and allows for command line tool installation. (r807)
-- Renamed menu item to from "Highlight Syntax" to "Colorize Syntax". (r765)
-- Updated OrgeKit.
-- Localizations no longer available: Catalan, Dutch.
+- Moved font preferences to the new Style preference pane. (r894)
+- Used consistently the term "Highlight Syntax" instead of "Colorize Syntax". (r765)
+- "Copy Document URL" command now works only on announced documents. (SEE-155, r809)
+- Visibility setting is now sticky. (r837)
+- SubEthaEdit no longer listens for incoming connections when internet connections were prohibited and the status has been set to invisible. (SEE-122, r826)
+- Autocompletion now takes all open documents using the same mode into account.
+- AppleScript: Removed the attachments and size properties of the text class.
+- System encoding is used when a file can't be read using the specified encoding. (SEE-165, r953)
+- Display preferences for status bars are now sticky per mode. (SEE-124, r766)
+- Removed "#" image for pragma marks in Objective-C mode and for comment lines in PHP mode. (r802)
+- Removed out-of-date Dutch localization.
+(- Updated OrgeKit.)
 
 Fixes:
-- Fixed comment escaping in LaTeX mode. (r961)
-- Perl mode: Added qq qr qx qw and q operators with {}, //, || to fix some stuff. (r958)
-- Perl array counter ($#foo) is no longer recognized as comment in Perl mode. (r957)
-- Revert doesn't handle replaced files correctly. (SEE-166, r955)
-- Open files does not work when special encoding is set. (SEE-165, r953)
-- Fixed crash on "server". (r950)
-- More consistent display of the status of toolbar items. (r945)
-- SEE no longer opens a new window when started via Xcode. (SEE-136, r930)
-- Setup now longer consumes 100% CPU. (r921)
-- Fixed initial color selection. (r920)
-- Exception raised during delayed performSelector: "performRoundRobinMessageProcessing". (SEE-160, r908)
-- Fixed ODB bug where a close event is not send when SEE is quitted. (r893)
-- Added coloring for entities in XML and related modes. (r883)
-- No transparency in the "ID" symbol image. (HYR-413, r882)
-- LaTeX: {} within e.g. /section{}. (HYR-359, r879)
-- Fixed several issues regarding coloring of regular expressions in Perl mode. (r878)
-- Fixed several "location of file cannot be determined" issues.
-- Odd behavior with invisible. (SEE-156, r837)
-- Visibility preference is now stored persistently. (r837)
-- Disabling network alltogether should be possible. (SEE-122, r826)
-- Copy Document URL should only work on announced documents. (SEE-155, r809)
-- Fixed a crash occurred with web preview. (r772)
-- Removed Symbol# image for pragma marks in Objective-C mode and for comment lines in PHP mode. (r802)
-- Blockedit behaves strangely when inserting tabs is on. (SEE-117, r771)
-- Different sized tabs used when hitting tab in blockedit mode. (HYR-411, r771)
-- Fixed shift left shift right when using tabs. Now its greedy (converts
-  all leading whitespace to tabs) and works when only spaces are leading
-  whitespace. (r769)
-- Web preview window now keeps its title in sync with the main edit window. (r768)
-- Fixed a bug where delayed web preview did not work in modes without symbols. (r767)
-- Show/Hide status bar should be sticky (per mode?). (SEE-124, r766)
-- Show Matching Brackets breaks Blockediting. (HYR-383, r765)
-- Fixed symbols that appeared twice in Lua mode. (r757)
-- Fixed coloring of variables in PHP mode. (r756)
+- Fixed a bug where the mode of a document was reseted to its original value during a revert of the document. (r965)
+- Fixed a bug where the window width display in the bottom status bar wasn't correctly updated after a font change. (r966)
+- Fixed bug in Perl mode where an array counter was recognized as a comment. (r957)
+- Fixed a bug where a document lost its location after a revert. (SEE-166, r955)
+- Fixed a bug where a new document was opened when SubEthaEdit was launched via Xcode. (SEE-136, r930)
+- Fixed a bug where the setup consumed 100% CPU. (r921)
+- Fixed a bug where the user's initial colors weren't determined randomly. (r920)
+- Fixed a bug where an external application (e.g. FTP clients) invoking SubEthaEdit wasn't notified when SubEthaEdit was quitted. (r893)
+- Fixed several issues regarding highlighting of regular expressions in Perl mode. (r878)
+- Fixed several bugs where the location of a document couldn't be determined while trying to save it.
+- Fixed a bug where the status of a connection wasn't displayed correctly in the internet browser. (SEE-156, r837)
+- Fixed a bug where delayed web preview didn't work in modes without symbols. (r767)
+- Fixed a bug which could cause a crash when SubEthaEdit shared a document. (r950)
+- Fixed a bug which could cause a crash when the web preview was closed. (r772)
+- Fixed a bug where the web preview window title wasn't in sync with the corresponding document window title. (r768)
+- Fixed a bug which could prevent further display of changes when matching brackets where highlighted while blockediting. (HYR-383, r765)
+- Fixed "ID" symbol image in the symbol popup menu by adding transparency to the image. (HYR-413, r882)
+- Fixed a bug in LaTeX mode where highlighting failed when there were "{" or "}" characters in the argument of a command. (HYR-359, r879)
+- Fixed a bug which could result in inserting different sized tabs when using tabs while blockediting. (HYR-411, r771)
+- Fixed a bug where shift left or shift right didn't work correctly when tabs were activated. (r769)
+- Fixed a bug where toolbar item labels where not displayed correctly. (r945)
+- Fixed a bug in Lua mode where symbols appared twice. (r757)
+- Fixed highlighting of variables in PHP mode. (r756)
+- Fixed a bug where participants seemed to have lost their connections but were still listed as participants. (SEE-160, r908)
+- Fixed a bug in LaTeX mode which could result in wrong highlighting of escaped comments. (r961)
+- Fixed a bug in Perl mode which could break syntax highlighting in regexp quote-like operators. (r958)
