* createDiskImage.sh   Fixed path to chgrp and chmod commands.
* OgreKit
  Merged OgreKit 2.0.0beta9 to trunk.

* RE.txt
  Updated RE.txt to oniguruma 3.3.1 version.
  
* SubEthaEdit.xcode/project.pbxproj
  Increased initial disk image size to 15 MB.

--- a/OgreKit/RegularExpression/Documentation/History.txt
+++ b/OgreKit/RegularExpression/Documentation/History.txt
@@ -1,3 +1,21 @@
+2004-10-20 Isao Sonobe  <sonobe@gauge.scphys.kyoto-u.ac.jp>
+
+	* OgreKit[dep]: 
+	release ver.2.0.0beta9.
+
+	* Oniguruma[dist]: 
+	import ver.3.3.1.
+
+2004-10-20 Isao Sonobe  <sonobe@gauge.scphys.kyoto-u.ac.jp>
+
+	* OgreKit[dep]: 
+	release ver.2.0.0beta8.
+
+	* Oniguruma[dist]: 
+	import ver.3.3.0.
+	Sorry, I forgot to update the Oniguruma.
+	(thanks Martin Ott)
+
 2004-09-26 Isao Sonobe  <sonobe@gauge.scphys.kyoto-u.ac.jp>
 
 	* OgreKit[dep]: 
