Adding Tiger aware Objective-C mode.

--- a/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,4 @@
 Changes with Version 1.1
     
     *) SYNTAX: Changed Character to state to fix HYR-371.
+    *) Adding additional Cocoa classes, constants and functions
