--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2
+    
+    *) SYNTAX: Fixed preprocessor end regex. HYR-410.
+
 Changes with Version 1.1
     
     *) SYNTAX: Changed Character to state to fix HYR-371.
