- fixed HYR-600 and HYR-591 - added some example files in the test directory to do regression tests - please add any further file that makes problems or has interesting aspects in it there

--- a/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2
+    *) added private, public and protected to RegexSymbols as well as SyntaxDefinition.html
+    *) fixed double appeareance of functions if indented 3 spaces
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
