--- a/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2
+    
+    *) SYNTAX: Fixed a problem with POD comments (= after a state).
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
